--- a/systemd/.config/systemd/user/mbsync.service
+++ b/systemd/.config/systemd/user/mbsync.service
@@ -3,4 +3,4 @@ Description=Mailbox synchronization service
 
 [Service]
 Type=oneshot
-ExecStart=/bin/dash %h/.config/mutt/sync_mail
+ExecStart=/bin/dash %h/.config/mutt/scripts/sync_mail
