[ncmpcpp] new default library media tag

--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -32,11 +32,13 @@ ask_before_clearing_playlists = "no"
 song_status_format = "{$8%a} $(25)❯$(26)> {$8%t} $(25)❯$(26)> $b{$8%b}$/b $b({$8%y})$/b"
 song_list_format = " $0$8$8%5n$0$8 $(238)|$7 $7%26a$7 $(238)❯$(238)>$7 $6%44t$(1)$R$(238)❮ $8%5l $(238)| $(8)%28b$(8) "
 song_library_format = "{%n > }{%t}|{%f}"
+media_library_primary_tag = "album_artist"
+media_library_albums_split_by_date = "yes"
 now_playing_suffix = "$/b$(24)◂$3"
 progressbar_look = "─╼ "
 titles_visibility = "no"
 header_visibility = "no"
-statusbar_visibility = "yes" 
+statusbar_visibility = "yes"
 display_bitrate = "yes"
 display_remaining_time = "no"
 clock_display_seconds = "yes"
