--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -19,6 +19,18 @@
   "emmet.excludeLanguages": [
     "markdown"
   ],
+  "diagnostic-languageserver.filetypes": {
+      "sh": "shellcheck"
+  },
+  "diagnostic-languageserver.formatFiletypes": {
+      "sh": "shfmt"
+  },
+  "diagnostic-languageserver.formatters": {
+      "shfmt": {
+          "command": "shfmt",
+          "args": ["-i", "2", "-bn", "-ci", "-sr"]
+      }
+  },
   "javascript.suggest.autoImports": true,
   "diagnostic.messageTarget": "float",
   "signature.target": "float",
