[polybar] use polybar song string

--- a/polybar/.config/polybar/modules.cfg
+++ b/polybar/.config/polybar/modules.cfg
@@ -31,23 +31,11 @@ format-background = ${color.mgf}
 tail = true
 
 [module/mpd]
-type = internal/mpd
-format-online = ${env:POLYBAR_MPD_FORMAT_ONLINE}
-format-playing = ${self.format-online}
-format-playing-prefix = ${self.lmpd}
-format-paused = ${env:POLYBAR_MPD_FORMAT_PAUSED}
-format-playing-suffix =
-format-paused-suffix =
-format-stopped =
-format-offline = ${env:POLYBAR_MPD_OFFLINE}
-label-song = %artist% ― %title%
-label-time = ${env:POLYBAR_MPD_SONG_TIME}
-lmpd=${env:POLYBAR_MPD_LEFT_SIDE}
-format-online-background = ${color.mgf}
-format-offline-background = ${color.mgf}
-host = ::1
-port = 6600
-interval = 1
+type = custom/script
+exec = PYTHONPATH=${XDG_CONFIG_HOME}/i3 python -u -m bin.polybar_mpd 2> /dev/null
+interval = 0
+format-background = ${color.mgf}
+tail = true
 
 [module/time]
 type = internal/date
