[polybar] fix polybar ft

--- a/polybar/.config/polybar/modules.cfg
+++ b/polybar/.config/polybar/modules.cfg
@@ -79,3 +79,5 @@ accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
 label-connected = "eth:%downspeed%%{F#395573}/%{F-}%upspeed% "
 format-connected-background = ${color.mgf}
+
+; vim: set ft=dosini:
