--- a/polybar/.config/polybar/common.cfg
+++ b/polybar/.config/polybar/common.cfg
@@ -40,3 +40,5 @@ font-3 = PragmataPro for Powerline:style=Bold:size=16;3
 font-4 = Font Awesome 5 Free:size=16;3
 font-5 = Ume P Gothic C5:style=Medium:size=16;4
 font-6 = Iosevka:style=Heavy:size=10;1
+
+; vim: set ft=dosini:
