[polybar] simple input

--- a/polybar/.config/polybar/modules.cfg
+++ b/polybar/.config/polybar/modules.cfg
@@ -46,7 +46,7 @@ format-background = ${color.mgf}
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
-label-layout = ${env:POLYBAR_INPUT_FORMAT}
+label-layout = input:%layout%
 label-indicator-padding = 0
 label-indicator-background = ${color.mgf}
 label-indicator-underline = ${color.mgf}
