--- a/rofi/.config/rofi/config
+++ b/rofi/.config/rofi/config
@@ -1,6 +1,6 @@
 rofi.terminal:                      st
 rofi.run-command:                   {cmd}
-rofi.run-shell-command:             st {cmd}
+rofi.run-shell-command:             alacritty -e {cmd}
 rofi.levenshtein-sort:              false
 rofi.parse-hosts:                   false
 rofi.auto-select:                   false
@@ -19,7 +19,7 @@ rofi.fullscreen:                    false
 rofi.fake-transparency:             false
 rofi.lazy-grab:                     true
 rofi.lazy-filter-limit:             100
-rofi.theme:                         ~/.config/xres/rofi/neg.rasi
+rofi.theme:                         ~/.config/rofi/neg.rasi
 
 rofi.kb-clear-line:
 rofi.kb-primary-paste:              Control+Shift+v,Shift+Insert
