[nvim] fix some coc-settings

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -16,8 +16,8 @@
     "scss": "css",
     "sass": "css"
   },
-  "codeLens.enable": true,
-  "diagnostic.virtualText": true,
+  "codeLens.enable": false,
+  "diagnostic.virtualText": false,
   "suggest.completionItemKindLabels": {
     "module": " ",
     "function": "ﬦ",
