--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,6 +30,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'laktak/extrakto'
+set -g @plugin 'wfxr/tmux-fzf-url'
 
 run '~/.tmux/plugins/tpm/tpm'
 
