[git] update colors

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -2,48 +2,44 @@
     email = serg.zorg@gmail.com
     name = Neg
 [core]
-    pager = # do not use external pager
+    pager = nvimpager -c
     whitespace = trailing-space,cr-at-eol
     excludesfile = /etc/gitignore
     editor = "~/bin/v"
 [color]
-    branch     = auto
-    diff       = 1
-    grep       = auto
-    pager      = 0
-    showbranch = auto
-    status     = auto
-    ui         = auto
+    diff         = 1
+    pager        = 0
+    branch       = auto
+    grep         = auto
+    showbranch   = auto
+    status       = auto
+    ui           = auto
 [color "status"]
-    added     = 2 bold
-    branch    = 62
-    changed   = 4 bold
-    header    = 23
-    nobranch  = 197
-    untracked = 235
+    added        = 29
+    branch       = 62
+    changed      = 31 bold
+    header       = 23
+    localBranch  = 24
+    remoteBranch = 25
+    nobranch     = 197
+    untracked    = 235
 [color "branch"]
-    current = 67
-    local   = 18 bold
-    remote  = 25
+    current      = 67
+    local        = 18 bold
+    remote       = 25
 [color "diff"]
-    old        = 1
-    new        = 24
-    plain      = 7
-    meta       = 25
-    frag       = 67
-    func       = 68
-    commit     = 4
-    whitespace = 54
-[format]
-    pretty = format:%C(12)%h%C(2)%d %C(11)%<(45,trunc)%s%Creset%n%C(8)%cr %C(17)by %C(8)%cn%C(17) on %C(8)%cd%n
+    old          = 126
+    new          = 24
+    plain        = 7
+    meta         = 25
+    frag         = 67
+    func         = 68
+    commit       = 4
+    whitespace   = 54
 [man]
-    viewer = nvimpager
+    viewer = nvimpager -p
 [receive]
     denyCurrentBranch = ignore
-[alias]
-    wtf  = "!~/bin/git/git-wtf"
-    undo = checkout --
-    review = !nvim -p $(git files) +\"tabdo Gdiff $REVIEW_BASE\" +\"let g:gitgutter_diff_base = '$REVIEW_BASE'\"
 [github]
     user = neg-serg
 [push]
@@ -54,19 +50,19 @@
 [difftool "nwim"]
     cmd = ~/bin/v -d $LOCAL $REMOTE
 [merge]
-    tool = nvim
+    tool       = nvim
 [mergetool]
-    prompt = true
+    prompt     = true
 [mergetool "nwim"]
-    cmd = ~/bin/v -d $LOCAL $BASE $REMOTE $MERGED -c 'wincmd J | wincmd ='
+    cmd        = ~/bin/v -d $LOCAL $BASE $REMOTE $MERGED -c 'wincmd J | wincmd ='
 [mergetool "nvim"]
-    cmd = nvim -f -c \"Gdiffsplit!\" \"$MERGED\"
+    cmd        = nvim -f -c \"Gdiffsplit!\" \"$MERGED\"
 [credential]
-    helper = cache --timeout=28800
+    helper     = cache --timeout=28800
 [interactive]
     diffFilter = diff-highlight
 [filter "lfs"]
-    required = true
-    clean    = git-lfs clean -- %f
-    smudge   = git-lfs smudge -- %f
-    process  = git-lfs filter-process
+    required   = true
+    clean      = git-lfs clean -- %f
+    smudge     = git-lfs smudge -- %f
+    process    = git-lfs filter-process
