[polybar] remove xrdb extraction

--- a/polybar/.config/polybar/common.cfg
+++ b/polybar/.config/polybar/common.cfg
@@ -5,25 +5,25 @@ ac = #d26273
 mgf = "#aa020209"
 mf = #fdd835
 background = "#00020209"
-foreground = ${xrdb:polybar.light}
-border = ${xrdb:color32}
-border_top = ${xrdb:color32}
-black = ${xrdb:color0}
-bright_black = ${xrdb:color8}
-red = ${xrdb:color1}
-bright_red = ${xrdb:color9}
-green = ${xrdb:color2}
-bright_green = ${xrdb:color10}
-yellow = ${xrdb:color3}
-bright_yellow = ${xrdb:color11}
-blue = ${xrdb:color4}
-bright_blue = ${xrdb:color12}
-magenta = ${xrdb:color5}
-bright_magenta = ${xrdb:color13}
-teal = ${xrdb:color6}
-bright_teal = ${xrdb:color14}
-silver = ${xrdb:color7}
-white = ${xrdb:color15}
+foreground = "#cccccc"
+border = "#002b36"
+border_top = "#002b36"
+black = "#020202"
+bright_black = "#3D3D3D"
+red = "#8A2F58"
+bright_red = "#CF4F88"
+green = "#287373"
+bright_green = "#53A6A6"
+yellow = "#914E89"
+bright_yellow = "#BF85CC"
+blue = "#395573"
+bright_blue = "#4779B3"
+magenta = "#5E468C"
+bright_magenta = "#7F62B3"
+teal = "#2B7694"
+bright_teal = "#47959E"
+silver = "#899CA1"
+white = "#617287"
 bracket_color = "%{F#395573}"
 
 [border]
