--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -81,132 +81,133 @@ colors:
     white:   '0x617287'
 
   indexed_colors:
-    - { index: 16, color: '0x040408' }
-    - { index: 17, color: '0x01004C' }
-    - { index: 18, color: '0x00006C' }
-    - { index: 19, color: '0x000090' }
-    - { index: 20, color: '0x0000BA' }
-    - { index: 21, color: '0x0000FE' }
-    - { index: 22, color: '0x002B00' }
-    - { index: 23, color: '0x004E4E' }
-    - { index: 24, color: '0x005f87' }
-    - { index: 25, color: '0x005faf' }
-    - { index: 26, color: '0x005fd7' }
-    - { index: 27, color: '0x0090FF' }
-    - { index: 28, color: '0x005200' }
-    - { index: 29, color: '0x007A51' }
-    - { index: 30, color: '0x017978' }
-    - { index: 30, color: '0x357B63' }
-    - { index: 31, color: '0x285981' }
-    - { index: 32, color: '0x367CB0' }
-    - { index: 33, color: '0x4FB3FF' }
-    - { index: 34, color: '0x007C00' }
-    - { index: 35, color: '0x00AE73' }
-    - { index: 36, color: '0x3CAF88' }
-    - { index: 37, color: '0x00ACAC' }
-    - { index: 38, color: '0x7BC6FF' }
-    - { index: 39, color: '0xA2D7FF' }
-    - { index: 40, color: '0x00AE00' }
-    - { index: 41, color: '0x00FFA9' }
-    - { index: 42, color: '0x7DFF7E' }
-    - { index: 43, color: '0x00d7af' }
-    - { index: 44, color: '0x4FFFFF' }
-    - { index: 46, color: '0x00FF01' }
-    - { index: 47, color: '0x50FFC4' }
-    - { index: 48, color: '0xA1FFA1' }
-    - { index: 49, color: '0x00ffaf' }
-    - { index: 50, color: '0x00ffd7' }
-    - { index: 51, color: '0x00FFFF' }
-    - { index: 52, color: '0x380001' }
-    - { index: 53, color: '0x330021' }
-    - { index: 54, color: '0x320031' }
-    - { index: 55, color: '0x260039' }
-    - { index: 56, color: '0x245361' }
-    - { index: 57, color: '0x0a3749' }
-    - { index: 64, color: '0x547D55' }
-    - { index: 65, color: '0x80AE80' }
-    - { index: 66, color: '0x8D74B6' }
-    - { index: 67, color: '0x7C59B5' }
-    - { index: 68, color: '0xC5A2FE' }
-    - { index: 69, color: '0xDBC3FF' }
-    - { index: 70, color: '0x367C36' }
-    - { index: 71, color: '0x61AD62' }
-    - { index: 73, color: '0x367CB0' }
-    - { index: 74, color: '0x5788B0' }
-    - { index: 75, color: '0x7095B0' }
-    - { index: 76, color: '0x3FAD88' }
-    - { index: 77, color: '0x62AE94' }
-    - { index: 82, color: '0x86DB24' }
-    - { index: 83, color: '0x55AE24' }
-    - { index: 88, color: '0x5C0100' }
-    - { index: 89, color: '0x590038' }
-    - { index: 90, color: '0x570055' }
-    - { index: 91, color: '0x3D005D' }
-    - { index: 94, color: '0x531E00' }
-    - { index: 100, color: '0x4E3608' }
-    - { index: 101, color: '0xAC9563' }
-    - { index: 104, color: '0xAE7CFF' }
-    - { index: 105, color: '0xD37CFF' }
-    - { index: 110, color: '0x5B5BBB' }
-    - { index: 111, color: '0x7778BB' }
-    - { index: 112, color: '0x95DB18' }
-    - { index: 113, color: '0x9AEF45' }
-    - { index: 114, color: '0xC7FE40' }
-    - { index: 115, color: '0x05C390' }
-    - { index: 116, color: '0x7CD6EF' }
-    - { index: 117, color: '0x90EAFE' }
-    - { index: 124, color: '0x850001' }
-    - { index: 125, color: '0x810052' }
-    - { index: 126, color: '0x810081' }
-    - { index: 127, color: '0x570083' }
-    - { index: 130, color: '0x7F2E01' }
-    - { index: 136, color: '0x795000' }
-    - { index: 137, color: '0xAD893F' }
-    - { index: 141, color: '0xDBC3FF' }
-    - { index: 154, color: '0xC3FF01' }
-    - { index: 155, color: '0xFFFF7D' }
-    - { index: 156, color: '0xE0FF7D' }
-    - { index: 157, color: '0xEAFFA2' }
-    - { index: 160, color: '0xB40001' }
-    - { index: 161, color: '0xB20072' }
-    - { index: 162, color: '0xB100B0' }
-    - { index: 163, color: '0x7700B2' }
-    - { index: 166, color: '0xB04000' }
-    - { index: 172, color: '0xAC7300' }
-    - { index: 173, color: '0xFFC44E' }
-    - { index: 177, color: '0xE1A1FF' }
-    - { index: 196, color: '0xFE0000' }
-    - { index: 197, color: '0xFF01A2' }
-    - { index: 198, color: '0xFF00FE' }
-    - { index: 199, color: '0xAA00FF' }
-    - { index: 202, color: '0xFF5F01' }
-    - { index: 208, color: '0xFFAA01' }
-    - { index: 209, color: '0xFFD37C' }
-    - { index: 213, color: '0xEBC3FF' }
-    - { index: 232, color: '0x000508' }
-    - { index: 233, color: '0x010C12' }
-    - { index: 234, color: '0x04141C' }
-    - { index: 235, color: '0x071B26' }
-    - { index: 236, color: '0x0C2430' }
-    - { index: 237, color: '0x102C3A' }
-    - { index: 238, color: '0x163444' }
-    - { index: 239, color: '0x1C3D4E' }
-    - { index: 240, color: '0x234758' }
-    - { index: 241, color: '0x2B5062' }
-    - { index: 242, color: '0x34596C' }
-    - { index: 243, color: '0x3F6476' }
-    - { index: 244, color: '0x496E80' }
-    - { index: 245, color: '0x54788A' }
-    - { index: 246, color: '0x608394' }
-    - { index: 247, color: '0x6D8E9E' }
-    - { index: 248, color: '0x7C99A8' }
-    - { index: 249, color: '0x8DA6B2' }
-    - { index: 250, color: '0x95AFBC' }
-    - { index: 251, color: '0xA4BBC6' }
-    - { index: 252, color: '0xB7C8D0' }
-    - { index: 253, color: '0xBFCAD0' }
-    - { index: 254, color: '0xDBE1E4' }
-    - { index: 255, color: '0xEEEEEE' }
+    - { index: 16, color: '#040408' }
+    - { index: 17, color: '#01004C' }
+    - { index: 18, color: '#00006C' }
+    - { index: 19, color: '#000090' }
+    - { index: 20, color: '#0000BA' }
+    - { index: 21, color: '#0000FE' }
+    - { index: 22, color: '#002B00' }
+    - { index: 23, color: '#004E4E' }
+    - { index: 24, color: '#005f87' }
+    - { index: 25, color: '#005faf' }
+    - { index: 26, color: '#005fd7' }
+    - { index: 27, color: '#0090FF' }
+    - { index: 28, color: '#005200' }
+    - { index: 29, color: '#007A51' }
+    - { index: 30, color: '#017978' }
+    - { index: 30, color: '#357B63' }
+    - { index: 31, color: '#285981' }
+    - { index: 32, color: '#367CB0' }
+    - { index: 33, color: '#4FB3FF' }
+    - { index: 34, color: '#007C00' }
+    - { index: 35, color: '#00AE73' }
+    - { index: 36, color: '#3CAF88' }
+    - { index: 37, color: '#00ACAC' }
+    - { index: 38, color: '#7BC6FF' }
+    - { index: 39, color: '#A2D7FF' }
+    - { index: 40, color: '#00AE00' }
+    - { index: 41, color: '#00FFA9' }
+    - { index: 42, color: '#7DFF7E' }
+    - { index: 43, color: '#00d7af' }
+    - { index: 44, color: '#4FFFFF' }
+    - { index: 46, color: '#00FF01' }
+    - { index: 47, color: '#50FFC4' }
+    - { index: 48, color: '#A1FFA1' }
+    - { index: 49, color: '#00ffaf' }
+    - { index: 50, color: '#00ffd7' }
+    - { index: 51, color: '#00FFFF' }
+    - { index: 52, color: '#380001' }
+    - { index: 53, color: '#330021' }
+    - { index: 54, color: '#320031' }
+    - { index: 55, color: '#260039' }
+    - { index: 56, color: '#245361' }
+    - { index: 57, color: '#0a3749' }
+    - { index: 64, color: '#547D55' }
+    - { index: 65, color: '#80AE80' }
+    - { index: 66, color: '#8D74B6' }
+    - { index: 67, color: '#7C59B5' }
+    - { index: 68, color: '#C5A2FE' }
+    - { index: 69, color: '#DBC3FF' }
+    - { index: 70, color: '#367C36' }
+    - { index: 71, color: '#61AD62' }
+    - { index: 73, color: '#367CB0' }
+    - { index: 74, color: '#5788B0' }
+    - { index: 75, color: '#7095B0' }
+    - { index: 76, color: '#3FAD88' }
+    - { index: 77, color: '#62AE94' }
+    - { index: 80, color: '#29626E' }
+    - { index: 82, color: '#86DB24' }
+    - { index: 83, color: '#55AE24' }
+    - { index: 88, color: '#5C0100' }
+    - { index: 89, color: '#590038' }
+    - { index: 90, color: '#570055' }
+    - { index: 91, color: '#3D005D' }
+    - { index: 94, color: '#531E00' }
+    - { index: 100, color: '#4E3608' }
+    - { index: 101, color: '#AC9563' }
+    - { index: 104, color: '#AE7CFF' }
+    - { index: 105, color: '#D37CFF' }
+    - { index: 110, color: '#5B5BBB' }
+    - { index: 111, color: '#7778BB' }
+    - { index: 112, color: '#95DB18' }
+    - { index: 113, color: '#9AEF45' }
+    - { index: 114, color: '#C7FE40' }
+    - { index: 115, color: '#05C390' }
+    - { index: 116, color: '#7CD6EF' }
+    - { index: 117, color: '#90EAFE' }
+    - { index: 124, color: '#850001' }
+    - { index: 125, color: '#810052' }
+    - { index: 126, color: '#810081' }
+    - { index: 127, color: '#570083' }
+    - { index: 130, color: '#7F2E01' }
+    - { index: 136, color: '#795000' }
+    - { index: 137, color: '#AD893F' }
+    - { index: 141, color: '#DBC3FF' }
+    - { index: 154, color: '#C3FF01' }
+    - { index: 155, color: '#FFFF7D' }
+    - { index: 156, color: '#E0FF7D' }
+    - { index: 157, color: '#EAFFA2' }
+    - { index: 160, color: '#B40001' }
+    - { index: 161, color: '#B20072' }
+    - { index: 162, color: '#B100B0' }
+    - { index: 163, color: '#7700B2' }
+    - { index: 166, color: '#B04000' }
+    - { index: 172, color: '#AC7300' }
+    - { index: 173, color: '#FFC44E' }
+    - { index: 177, color: '#E1A1FF' }
+    - { index: 196, color: '#FE0000' }
+    - { index: 197, color: '#FF01A2' }
+    - { index: 198, color: '#FF00FE' }
+    - { index: 199, color: '#AA00FF' }
+    - { index: 202, color: '#FF5F01' }
+    - { index: 208, color: '#FFAA01' }
+    - { index: 209, color: '#FFD37C' }
+    - { index: 213, color: '#EBC3FF' }
+    - { index: 232, color: '#000508' }
+    - { index: 233, color: '#010C12' }
+    - { index: 234, color: '#04141C' }
+    - { index: 235, color: '#071B26' }
+    - { index: 236, color: '#0C2430' }
+    - { index: 237, color: '#102C3A' }
+    - { index: 238, color: '#163444' }
+    - { index: 239, color: '#1C3D4E' }
+    - { index: 240, color: '#234758' }
+    - { index: 241, color: '#2B5062' }
+    - { index: 242, color: '#34596C' }
+    - { index: 243, color: '#3F6476' }
+    - { index: 244, color: '#496E80' }
+    - { index: 245, color: '#54788A' }
+    - { index: 246, color: '#608394' }
+    - { index: 247, color: '#6D8E9E' }
+    - { index: 248, color: '#7C99A8' }
+    - { index: 249, color: '#8DA6B2' }
+    - { index: 250, color: '#95AFBC' }
+    - { index: 251, color: '#A4BBC6' }
+    - { index: 252, color: '#B7C8D0' }
+    - { index: 253, color: '#BFCAD0' }
+    - { index: 254, color: '#DBE1E4' }
+    - { index: 255, color: '#EEEEEE' }
 
 cursor:
   style: Block
