--- a/systemd/.config/systemd/user/cursor_swarp.service
+++ b/systemd/.config/systemd/user/cursor_swarp.service
@@ -5,7 +5,7 @@ After=dbus.service
 [Service]
 Type=simple
 Restart=on-failure
-ExecStart=%h/.config/xinit/cursor_swarp.zsh
+ExecStart=/usr/bin/swarp 9000 9000
 
 [Install]
 WantedBy=default.target
