[picom] realign opacity rules

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -66,4 +66,6 @@ blur-background-exclude : [
     "class_i = 'nwim'",
 ];
 
-opacity-rule : [ "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'", ];
+opacity-rule : [ 
+    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+];
