[ansible] update mitogen path

--- a/ansible/.config/ansible/ansible.conf
+++ b/ansible/.config/ansible/ansible.conf
@@ -14,7 +14,7 @@ bin_ansible_callbacks = True
 # увеличиваем лимит т.к. у нас очень большой конфиг для nagios
 max_diff_size = 1044480
 
-strategy_plugins = ~/src/wrk/infrastructure/mitogen/ansible_mitogen/plugins/strategy
+strategy_plugins = /usr/lib/python3.8/site-packages/ansible_mitogen/plugins/strategy
 strategy = mitogen_free
 
 gathering = smart
