[ncmpcpp] better highlight

--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -18,6 +18,8 @@ external_editor = "~/bin/v"
 jump_to_now_playing_song_at_start = "yes"
 ask_before_clearing_playlists = "no"
 song_window_title_format = "ncmpcpp ─╼ {%a - %t} {[%b{%d}]} <{%l}>"
+default_find_mode = "wrapped"
+block_search_constraints_change_if_items_found = "no"
 #--=[ Playlist ]=---------------
 playlist_disable_highlight_delay = "1"
 playlist_show_remaining_time = "yes"
@@ -26,6 +28,7 @@ playlist_display_mode = "classic"
 playlist_editor_display_mode = "columns"
 show_duplicate_tags = "no"
 cyclic_scrolling = "no"
+space_add_mode="always_add"
 lines_scrolled = "1"
 #--=[ Progressbar ]=--------
 progressbar_look = "─╼ "
@@ -62,12 +65,11 @@ main_window_color = "default"
 color1 = "cyan"
 color2 = "default"
 statusbar_color = "white"
-current_item_prefix = "$/b$3"
+current_item_prefix = "$3❯"
 current_item_suffix = "$/r$(end)"
-current_item_inactive_column_prefix="$/b$(25)"
-current_item_inactive_column_suffix="$/r$(end)"
+current_item_inactive_column_prefix=""
+current_item_inactive_column_suffix = "$/r$(end)"
 default_tag_editor_pattern = "%n - %t"
-default_find_mode = "normal"
 ignore_leading_the = "yes"
 ignore_diacritics = "yes"
 search_engine_display_mode = "classic"
