[ncmpcpp] new design

--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -17,7 +17,7 @@ use_console_editor = "yes"
 external_editor = "~/bin/v"
 jump_to_now_playing_song_at_start = "yes"
 ask_before_clearing_playlists = "no"
-song_window_title_format = "ncmpcpp ─╼ {%a - %t} {[%b{%d}]} <{%l}>"
+song_window_title_format = "ncmpcpp"
 default_find_mode = "wrapped"
 block_search_constraints_change_if_items_found = "no"
 #--=[ Playlist ]=---------------
@@ -33,12 +33,16 @@ lines_scrolled = "1"
 #--=[ Progressbar ]=--------
 progressbar_look = "─╼ "
 progressbar_color = "white"
-progressbar_elapsed_color = "cyan"
+progressbar_elapsed_color = "239"
 #--=[ Bars ]=---------------
 song_status_format = "{$8%a} $(25)❯$(26)> {$8%t} $(25)❯$(26)> $b{$8%b}$/b $b({$8%y})$/b"
-song_list_format = " $0$8$8%5n$0$8 $(238)|$7 $7%26a$7 $(238)❯$(238)>$7 $6%44t$(1)$R$(238)❮ $8%5l $(238)| $(8)%28b$(8) "
-song_library_format = "{%n > }{%t}|{%f}"
+song_list_format = "$(242)%5n$0$8 $7%26a$7 $(238)❯$7 $(248)%44t$(1)$R$(238)❮ $(248)%5l $(246)%28b"
+song_library_format = "{$(244)%n$(239) ❯ $0}{%t}|{%f}"
 now_playing_suffix = "$/b$(24)◂$(25)"
+current_item_prefix = "$3❯"
+current_item_suffix = "$/r$(end)"
+current_item_inactive_column_prefix = ""
+current_item_inactive_column_suffix = "$/r$(end)"
 titles_visibility = "no"
 header_visibility = "no"
 statusbar_visibility = "yes"
@@ -65,10 +69,6 @@ main_window_color = "default"
 color1 = "cyan"
 color2 = "default"
 statusbar_color = "white"
-current_item_prefix = "$3❯"
-current_item_suffix = "$/r$(end)"
-current_item_inactive_column_prefix=""
-current_item_inactive_column_suffix = "$/r$(end)"
 default_tag_editor_pattern = "%n - %t"
 ignore_leading_the = "yes"
 ignore_diacritics = "yes"
