[ncmpcpp] better ncmpcpp highlight

--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -35,14 +35,14 @@ progressbar_look = "─╼ "
 progressbar_color = "white"
 progressbar_elapsed_color = "239"
 #--=[ Bars ]=---------------
-song_status_format = "{$8%a} $(25)❯$(26)> {$8%t} $(25)❯$(26)> $b{$8%b}$/b $b({$8%y})$/b"
-song_list_format = "$(242)%5n$0$8 $7%26a$7 $(238)❯$7 $(248)%44t$(1)$R$(238)❮ $(248)%5l $(246)%28b"
-song_library_format = "{$(244)%n$(239) ❯ $0}{%t}|{%f}"
-now_playing_suffix = "$/b$(24)◂$(25)"
-current_item_prefix = "$3❯"
-current_item_suffix = "$/r$(end)"
-current_item_inactive_column_prefix = ""
-current_item_inactive_column_suffix = "$/r$(end)"
+song_status_format = "{$8%a} $(26)❯$(26)> {$8%t} $(26)❯$(26)> $b{$8%b}$/b $b({$8%y})$/b"
+song_list_format = "$(111)%5n  $7%26a$7$(238) ❯ $(250)%44t$(1)$R$(238)❮ $(250)%5l $7%28b"
+song_library_format = "{%n) ❯ }{%t}|{%f}"
+now_playing_suffix = "$/b$(24)◂$(26)"
+current_item_prefix = "$b$(26)❯>"
+current_item_suffix = "$/b$/r$(end)"
+current_item_inactive_column_prefix = "$b$(25)"
+current_item_inactive_column_suffix = "$/b$/r$(end)"
 titles_visibility = "no"
 header_visibility = "no"
 statusbar_visibility = "yes"
