[tmux] cleanup settings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,63 +38,37 @@ set -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_C
 set-window-option -g mode-keys vi
 set -wg mode-style bg=colour236,fg=colour247
 
-# don't wait for an escape sequence after hitting
-# Esc. fixes insert mode exit lag in vim
-set -sg escape-time 1
-
-# send the prefix to client inside window (ala nested sessions)
-bind C-a send-prefix
-
-set-window-option -g aggressive-resize on
-
-bind C-s last-window
-
-set -g history-limit 131072
-
-# for vim-alt(fixkey) keys compatibility
-# try not to use it to prevent disconnect
-set -s focus-events on
-
 set -g default-shell ${SHELL}
 set -g default-command ${SHELL}
 
-set-option -g terminal-overrides '*256col*:colors=256,xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E]50;CursorShape=%?%p1%{3}%<%t%{0}%e%p1%{2}%-%;%d\007'
-set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+set -sg escape-time 1 # fixes insert mode exit lag in vim
+bind C-a send-prefix # send the prefix to client inside window (ala nested sessions)
+set-window-option -g aggressive-resize on
+bind C-s last-window
+set -g history-limit 131072
+set -s focus-events on
 
 # 24-bit color support
 set-option -ga terminal-overrides ",tmux*:Tc"
 set-option -ga terminal-overrides ",alacritty*:Tc"
 set-option -ga terminal-overrides ",st*:Tc"
+set-option -g terminal-overrides '*256col*:colors=256,xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E]50'
+set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
-# tmux-256color by default
-set -g default-terminal "tmux-256color"
-
-# listen for activity on all windows
-set -g bell-action any
-# on-screen time for display-panes in ms
-set -g display-panes-time 2000
-# start window indexing at one instead of zero
-set -g base-index 1
-# border colours
-set -g pane-border-style fg=blue,bg=default
-# wm window title string (uses statusbar variables)
-set -g set-titles on
-
-# enable wm window titles
-setw -g automatic-rename yes
+set -g default-terminal "tmux-256color" # tmux-256color by default
+set -g bell-action any # listen for activity on all windows
+set -g display-panes-time 2000 # on-screen time for display-panes in ms
+set -g base-index 1 # start window indexing at one instead of zero
+set -g pane-border-style fg=blue,bg=default # border colours
+set -g set-titles on # wm window title string (uses statusbar variables)
+setw -g automatic-rename yes # enable wm window titles
 set-option -g visual-activity on
 set -g status-keys vi
-
 set -g message-style fg=white,bg=black
 
-# Mouse support.
-# mode-mouse: on allows scrolling, but requires Shift for X-selection (copy-mode does not).
 set-option -g -q mouse off
+bind -n M-m resize-pane -Z # zoom pane
 
-# zoom pane
-bind -n M-m resize-pane -Z
-
-#--Paste'n'copy
 bind p paste-buffer
 bind -T copy-mode-vi 'C-v' send -X rectangle-toggle
 bind -T copy-mode-vi 'Escape' send -X cancel
@@ -110,7 +84,6 @@ bind Tab copy-mode
 # ctrl+left/right cycles thru windows
 bind -n C-right next
 bind -n C-left prev
-bind space command-prompt -p index "select-window"
 
 bind a choose-session
 
