--- a/pulse/.config/pulse/daemon.conf
+++ b/pulse/.config/pulse/daemon.conf
@@ -1,4 +1,13 @@
-default-sample-format = float32le
-realtime-scheduling = yes
+default-sample-format = s32le
+default-sample-rate = 44100
+alternate-sample-rate = 48000
+; default-sample-rate = 352800
+; alternate-sample-rate = 384000
+realtime-scheduling = false
+avoid-resampling = yes
+flat-volumes = false
+resample-method = speex-float-5
 rlimit-rttime = -1
 exit-idle-time = -1
+default-fragments = 2
+default-fragment-size-msec = 25
