--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -66,3 +66,5 @@
     clean      = git-lfs clean -- %f
     smudge     = git-lfs smudge -- %f
     process    = git-lfs filter-process
+[pull]
+	rebase = true
