--- a/systemd/.config/systemd/user/x11.service
+++ b/systemd/.config/systemd/user/x11.service
@@ -2,14 +2,15 @@
 Description=startx as service
 
 [Service]
-Environment="SXHKD_SHELL=dash"
 Environment="QT_QPA_PLATFORMTHEME=qt5ct"
 Environment="QT_PLUGIN_PATH=$HOME/.kde4/lib/kde4/plugins/:/usr/lib/kde4/plugins/"
 Environment="XDG_CURRENT_DESKTOP=KDE"
 Environment="XDG_SESSION_TYPE=x11"
 Environment="GDK_BACKEND=x11"
 Environment="DESKTOP_SESSION=kde"
-ExecStart=/usr/bin/startx
+Environment="XINITRC=%h/.config/xinit/xinitrc"
+Environment="XSERVERRC=%h/.config/xinit/xserverrc"
+ExecStart=%h/bin/scripts/xinit
 Restart=on-abort
 
 [Install]
