--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,17 +1,17 @@
 [Settings]
 gtk-button-images=0
-gtk-cursor-theme-name=Paper
-gtk-cursor-theme-size=16
+gtk-cursor-theme-name=Layan-cursors
+gtk-cursor-theme-size=32
 gtk-decoration-layout=appmenu:none
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=0
-gtk-font-name=Iosevka Term 12
-gtk-icon-theme-name=Paper
+gtk-font-name=Iosevka Medium 12
+gtk-icon-theme-name=Flat-Remix-Blue-Dark
 gtk-key-theme-name=Emacs
 gtk-menu-images=0
 gtk-modules=canberra-gtk-module
-gtk-theme-name=Matcha-dark-azul
-gtk-toolbar-icon-size=GTK_ICON_SIZE_MENU
+gtk-theme-name=Flat-Neg
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-xft-antialias=1
 gtk-xft-hinting=1
