--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -8,8 +8,7 @@ ncmpcpp_directory = "~/.config/ncmpcpp"
 autocenter_mode = "yes"
 centered_cursor = "yes"
 user_interface = "classic"
-follow_now_playing_lyrics = "yes"
-locked_screen_width_part = "50"
+locked_screen_width_part = "70"
 display_bitrate = "yes"
 mouse_support = "yes"
 mouse_list_scroll_whole_page = "yes"
@@ -35,24 +34,21 @@ progressbar_look = "─╼ "
 progressbar_color = "white"
 progressbar_elapsed_color = "239"
 #--=[ Bars ]=---------------
-song_status_format = "{$8%a} $(26)❯$(26)> {$8%t} $(26)❯$(26)> $b{$8%b}$/b $b({$8%y})$/b"
-song_list_format = "$(111)%5n  $7%26a$7$(238) ❯ $(250)%44t$(1)$R$(238)❮ $(250)%5l $7%28b"
-song_library_format = "{%n) ❯ }{%t}|{%f}"
+song_status_format = "{$8%a} $(26)❯$(26)> {$8%t} $(26)❯$(26)> $b{$8%b}$/b $b({$8%y})$/b$(end)"
+song_list_format = "$(111)%5n  $7%26a$7$(238) ❯ $(250)%44t$(1)$R$(238)❮ $(250)%5l $7%28b$(end)"
+song_library_format = "{$(3)%n$(end)$(26) ❯ $(end)}{%t}|{%f}"
 now_playing_suffix = "$/b$(24)◂$(26)"
 current_item_prefix = "$b$(26)❯>"
 current_item_suffix = "$/b$/r$(end)"
-current_item_inactive_column_prefix = "$b$(25)"
+current_item_inactive_column_prefix = "$b$(25)$(end)"
 current_item_inactive_column_suffix = "$/b$/r$(end)"
 titles_visibility = "no"
 header_visibility = "no"
 statusbar_visibility = "yes"
-display_remaining_time = "no"
-clock_display_seconds = "yes"
 #--=[ Media library ]=--------
 media_library_primary_tag = "artist"
 media_library_albums_split_by_date = "yes"
 #--=[ Browser ]=--------------
-browser_playlist_prefix = "$2plist »$9 "
 browser_display_mode = "classic"
 incremental_seeking = "yes"
 seek_time = "4"
