[tmux] respect xdg_config_home

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -32,7 +32,7 @@ set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'wfxr/tmux-fzf-url'
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
 
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 set-window-option -g mode-keys vi
@@ -74,7 +74,7 @@ bind -T copy-mode-vi 'V' send -X select-line
 bind -T copy-mode-vi 'r' send -X rectangle-toggle
 
 bind -n M-n new-window
-bind -n M-/ run-shell "/home/neg/.tmux/plugins/tmux-fingers/scripts/tmux-fingers.sh"
+bind -n M-/ run-shell "~/.config/tmux/plugins/tmux-fingers/scripts/tmux-fingers.sh"
 
 bind Tab copy-mode
 
@@ -86,7 +86,7 @@ bind a choose-session
 
 bind | split-window -h
 bind _ split-window -v
-bind R source-file ~/.tmux.conf \; display-message "  Config reloaded..".
+bind R source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded"
 
 bind b choose-buffer -O name {run "tmux save-buffer -b '%%' - | xsel -i -b"} \; send-keys up
 bind-key -T copy-mode-vi C-c send-keys -X copy-pipe "xsel -i -b" \; send-keys -X cancel
@@ -106,7 +106,7 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind -n M-C-w if "! $is_vim" "kill-pane"
 
-run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+run-shell ~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux
 set -g @resurrect-capture-pane-contents 'on'
 
 set -g status on
@@ -122,4 +122,4 @@ set-window-option -qg window-status-style "fg=#617287"
 set-window-option -qg window-status-activity-style "fg=#ff5858"
 set-window-option -qg window-status-bell-style "fg=#ff00ff"
 set -g status-right-length 150
-set-option -g status-right '#[fg=white]#(~/.tmux/bin/tmux_statusline)'
+set-option -g status-right '#[fg=white]#(~/.config/tmux/bin/tmux_statusline)'
