--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -7,35 +7,35 @@
     excludesfile = /etc/gitignore
     editor = "~/bin/v"
 [color]
-    diff         = 1
-    pager        = 0
-    branch       = auto
-    grep         = auto
-    showbranch   = auto
-    status       = auto
-    ui           = auto
+    diff = 1
+    pager = 0
+    branch = auto
+    grep = auto
+    showbranch = auto
+    status = auto
+    ui = auto
 [color "status"]
-    added        = 29
-    branch       = 62
-    changed      = 31 bold
-    header       = 23
-    localBranch  = 24
+    added = 29
+    branch = 62
+    changed = 31 bold
+    header = 23
+    localBranch = 24
     remoteBranch = 25
-    nobranch     = 197
-    untracked    = 235
+    nobranch = 197
+    untracked = 235
 [color "branch"]
-    current      = 67
-    local        = 18 bold
-    remote       = 25
+    current = 67
+    local = 18 bold
+    remote = 25
 [color "diff"]
-    old          = 126
-    new          = 24
-    plain        = 7
-    meta         = 25
-    frag         = 67
-    func         = 68
-    commit       = 4
-    whitespace   = 54
+    old = 126
+    new = 24
+    plain = 7
+    meta = 25
+    frag = 67
+    func = 68
+    commit = 4
+    whitespace = 54
 [man]
     viewer = nvimpager -p
 [receive]
@@ -50,21 +50,21 @@
 [difftool "nwim"]
     cmd = ~/bin/v -d $LOCAL $REMOTE
 [merge]
-    tool       = nvim
+    tool = nvim
 [mergetool]
-    prompt     = true
+    prompt = true
 [mergetool "nwim"]
-    cmd        = ~/bin/v -d $LOCAL $BASE $REMOTE $MERGED -c 'wincmd J | wincmd ='
+    cmd = ~/bin/v -d $LOCAL $BASE $REMOTE $MERGED -c 'wincmd J | wincmd ='
 [mergetool "nvim"]
-    cmd        = nvim -f -c \"Gdiffsplit!\" \"$MERGED\"
+    cmd = /usr/bin/nvim -f -c \"Gdiffsplit!\" \"$MERGED\"
 [credential]
-    helper     = cache --timeout=28800
+    helper = cache --timeout=28800
 [interactive]
     diffFilter = diff-highlight
 [filter "lfs"]
-    required   = true
-    clean      = git-lfs clean -- %f
-    smudge     = git-lfs smudge -- %f
-    process    = git-lfs filter-process
+    required = true
+    clean = git-lfs clean -- %f
+    smudge = git-lfs smudge -- %f
+    process = git-lfs filter-process
 [pull]
 	rebase = true
