[ncmpcpp] some config fixes

--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -10,8 +10,8 @@ centered_cursor = "yes"
 user_interface = "classic"
 locked_screen_width_part = "70"
 display_bitrate = "yes"
-mouse_support = "yes"
-mouse_list_scroll_whole_page = "yes"
+mouse_support = "no"
+mouse_list_scroll_whole_page = "no"
 use_console_editor = "yes"
 external_editor = "~/bin/v"
 jump_to_now_playing_song_at_start = "yes"
@@ -19,6 +19,8 @@ ask_before_clearing_playlists = "no"
 song_window_title_format = "ncmpcpp"
 default_find_mode = "wrapped"
 block_search_constraints_change_if_items_found = "no"
+lyrics_fetchers = ''
+store_lyrics_in_song_dir = 'no'
 #--=[ Playlist ]=---------------
 playlist_disable_highlight_delay = "1"
 playlist_show_remaining_time = "yes"
@@ -58,7 +60,7 @@ colors_enabled = "yes"
 discard_colors_if_item_is_selected = "yes"
 header_window_color = "black"
 volume_color = "cyan"
-volume_change_step = "2"
+volume_change_step = "1"
 state_line_color = "black"
 state_flags_color = "green"
 main_window_color = "default"
