[tmux] cleanup, add tmux-continuum

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -23,15 +23,14 @@ set -g set-clipboard on
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'laktak/extrakto'
-set -g @plugin 'wfxr/tmux-fzf-url'
-
+set -g @continuum-restore 'on'
 run '~/.config/tmux/plugins/tpm/tpm'
 
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 set-window-option -g mode-keys vi
 set -wg mode-style bg=colour236,fg=colour247
-
 set -g default-shell ${SHELL}
 set -g default-command ${SHELL}
 
@@ -48,7 +47,6 @@ set-option -ga terminal-overrides ",tmux*:Tc"
 set-option -ga terminal-overrides ",alacritty*:Tc"
 
 set -g bell-action any # listen for activity on all windows
-set -g display-panes-time 2000 # on-screen time for display-panes in ms
 set -g base-index 1 # start window indexing at one instead of zero
 set -g pane-border-style fg=blue,bg=default # border colours
 set -g set-titles on # wm window title string (uses statusbar variables)
@@ -58,15 +56,15 @@ set -g status-keys vi
 set -g message-style fg=white,bg=black
 
 set-option -g -q mouse off
-bind -n M-m resize-pane -Z # zoom pane
 
-bind p paste-buffer
 bind -T copy-mode-vi 'C-v' send -X rectangle-toggle
-bind -T copy-mode-vi 'Escape' send -X cancel
-bind -T copy-mode-vi 'C-c' send -X cancel
 bind -T copy-mode-vi 'V' send -X select-line
 bind -T copy-mode-vi 'r' send -X rectangle-toggle
+bind -T copy-mode-vi 'Escape' send -X cancel
+bind -T copy-mode-vi 'C-c' send -X cancel
+
 bind -n M-n new-window
+bind -n M-m resize-pane -Z # zoom pane
 bind Tab copy-mode
 
 # ctrl+left/right cycles thru windows
@@ -87,9 +85,6 @@ bind -r h resize-pane -L 1
 bind -r j resize-pane -D 1
 bind -r k resize-pane -U 1
 bind -r l resize-pane -R 1
-
-bind X next-layout
-bind Z previous-layout
 
 # Smart pane switching with awareness of Vim splits. - Thanks CHRIS TOOMEY!
 # See: https://github.com/christoomey/vim-tmux-navigator
