[tmux] use emacs status keys, set esc time to 0

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -34,7 +34,7 @@ set -wg mode-style bg=colour236,fg=colour247
 set -g default-shell ${SHELL}
 set -g default-command ${SHELL}
 
-set -sg escape-time 1 # fixes insert mode exit lag in vim
+set -sg escape-time 0 # fixes insert mode exit lag in vim
 bind C-a send-prefix # send the prefix to client inside window (ala nested sessions)
 set-window-option -g aggressive-resize on
 bind C-s last-window
@@ -52,7 +52,7 @@ set -g pane-border-style fg=blue,bg=default # border colours
 set -g set-titles on # wm window title string (uses statusbar variables)
 setw -g automatic-rename yes # enable wm window titles
 set-option -g visual-activity on
-set -g status-keys vi
+set -g status-keys emacs
 set -g message-style fg=white,bg=black
 
 set-option -g -q mouse off
