[keynav] make keynav respect xdg spec

--- a/systemd/.config/systemd/user/keynav.service
+++ b/systemd/.config/systemd/user/keynav.service
@@ -6,7 +6,7 @@ After=picom.service
 Type=simple
 Restart=on-failure
 RestartSec=10
-ExecStart=/usr/bin/keynav
+ExecStart=/usr/bin/keynav "loadconfig ~/.config/keynav/keynavrc"
 
 [Install]
 WantedBy=default.target
