--- a/git/.config/tig/config
+++ b/git/.config/tig/config
@@ -17,7 +17,7 @@ set wrap-lines = no # Wrap long lines in pager views?
 set tab-size = 2 # Number of spaces to use when expanding tabs
 set line-graphics = utf-8 # Enum: ascii, default, utf-8
 
-set reference-format = [branch] <tag> {remote} ~replace~
+set reference-format = ⟨branch⟩ ⟨tag⟩ ❰remote❱ ~replace~
 
 #--[ How to read content from git ]-----------------------------------------------------
 set commit-order = default # Enum: default, topo, date, reverse (main)
@@ -37,19 +37,13 @@ set editor-line-number = yes # Automatically pass line number to editor? Used
                              # for opening file at specific line e.g. from a diff
 set mouse = no # Enable mouse support?
 
-#--[ View switching ]--------
 bind generic m view-main
 bind generic d view-diff
 bind generic l view-log
 bind generic t view-tree
-bind generic f view-blob
 bind generic b view-blame
-bind generic r view-refs
-bind generic p view-pager
 bind generic h view-help
 bind generic s view-status
-bind generic S view-status # Compat binding to avoid going crazy!
-bind generic c view-stage
 bind generic y view-stash
 
 # View manipulation
@@ -182,13 +176,6 @@ color stat-untracked magenta default
 color help-group blue default
 color help-action blue default
 color diff-stat blue default
-color palette-0 magenta default
-color palette-1 blue default
-color palette-2 cyan default
-color palette-3 green default
-color palette-4 default default
-color palette-5 white default
-color palette-6 red default
 color graph-commit 25 default
 
 #--[ Mappings for colors read from git configuration. ]--
